errout
  File "because_lib.py", line 103
    priny r
          ^
SyntaxError: invalid syntax
